--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,38 @@
 @charset "UTF-8";
 
+.size-change{
+  background-color: #ff0000;
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.colorchange{
+  background-color: #ff0000;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.margin-change{
+  display: flex;
+  width: 300px;
+  height: 300px;
+  margin: 
+}
+
+
+@media screen and (max-width:960px){
+  .size-change{
+    background-color: #ff0000;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  .colorchange{
+    background-color: #007bff;
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+  }
+}
