--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+.wrapper{
+  width: 1100px;
+  margin: 0 auto;
+}
+
 .size-change{
   background-color: #ff0000;
   width: 400px;
@@ -25,15 +30,36 @@
   margin-left: 150px;
 }
 
-.left-box{
+.margin-left-box{
   background-color: #0008ff;
   margin-left: 0;
 }
 
-.right-box{
+.margin-right-box{
   background-color: #22ff00;
 }
 
+.float-container{
+  position: relative;
+  overflow: hidden;
+  width: 1100px;
+
+}
+
+.float-box{
+  float: left;
+  width: 300px;
+  height: 300px;
+  position: relative;
+
+}
+
+.float-red-box{
+  background-color: #ff0000;
+}
+.float-blue-box{
+  background-color: #0008ff;
+}
 
 @media screen and (max-width:960px){
   .size-change{
@@ -56,4 +82,6 @@
   .margin-box{
     margin-left: 50px;
   }
+
+
 }
