--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
 }
 
+/* サイズ変更 */
 .size-change{
   background-color: #ff0000;
   width: 400px;
@@ -12,6 +13,7 @@
   margin: 0 auto;
 }
 
+/* 色変更 */
 .color-change{
   background-color: #ff0000;
   width: 300px;
@@ -19,6 +21,7 @@
   margin: 0 auto;
 }
 
+/* マージン変更 */
 .margin-container{
   display: flex;
   justify-content: center;
@@ -39,6 +42,7 @@
   background-color: #22ff00;
 }
 
+/* フロート変更 */
 .float-container{
   position: relative;
   overflow: hidden;
@@ -61,14 +65,20 @@
 .float-red-box{
   background-color: #ff0000;
 }
+
 .float-blue-box{
   background-color: #0008ff;
+}
+
+/* 順番変更（逆順） */
+.reverse-container{
+  display: flex;
+  justify-content: center;
 }
 
 .reverse-box{
   width: 300px;
   height: 300px;
-  display: flex;
 }
 
 .reverse-first-box{
@@ -84,8 +94,9 @@
 }
 
 .text{
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   line-height: 300px;
 }
 
@@ -113,5 +124,9 @@
 
   .float-content, .float-box{
     float: none;
+  }
+
+  .reverse-box{
+    flex-direction: column-reverse;
   }
 }
