--- a/css/style.css
+++ b/css/style.css
@@ -42,27 +42,20 @@
   background-color: #22ff00;
 }
 
-/* フロート変更 */
-.float-container {
-  position: relative;
+/* フロートの解除 */
+.float-container{
+  width: 600px;
+  margin:0 auto;
   overflow: hidden;
 }
-
 .float-content {
-  position: relative;
-  left: 50%;
-  /* ulの代替的なやつを右に50%移動 */
-  float: left;
+
 }
 
 .float-box {
-  position: relative;
   float: left;
   width: 300px;
-  ;
   height: 300px;
-  left: -50%;
-  /* ulの代替的なやつ中央に戻す */
 }
 
 .float-red-box {
@@ -149,17 +142,12 @@
 @media screen and (max-width:960px) {
   /* サイズ変更 */
   .size-change {
-    background-color: #ff0000;
     width: 200px;
     height: 200px;
-    margin: 0 auto;
   }
   /* 色変更 */
   .color-change {
     background-color: #007bff;
-    width: 300px;
-    height: 300px;
-    margin: 0 auto;
   }
   /* マージン変更 */
   .margin-container {
@@ -169,7 +157,6 @@
     margin-left: 50px;
   }
   /* フロートの解除 */
-  .float-content,
   .float-box {
     float: none;
   }
@@ -177,7 +164,6 @@
   .reverse-container {
     flex-direction: row-reverse;
     align-items: flex-start;
-    display: flex;
   }
   /* 順番変更（指定） */
   .change-container {
